bugfix slider z-index on regain n menubar fix

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -132,6 +132,7 @@
     top: 0;
     background-color: #fff;
     box-shadow: 18px 0px 18px #888888;
+    z-index: 99;
 
     .close-btn {
       width: 24px;
